<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="soa.baldiva.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">

        <Button
            android:id="@+id/button14"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:drawable/arrow_down_float"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginRight="16dp"
            android:layout_marginRightEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView18"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center"
            android:text="@string/unidadesPesadas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/campos"
            android:clickable="false"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cantInicial"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/campos"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/pesoInicial"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button11"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/switch1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button11"
            style="@android:style/Widget.Button"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="-17dp"
            android:background="@drawable/botones"
            android:text="@string/fijarPesoUnitario"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switch1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.127" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center"
            android:text="@string/pesoActual"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button15"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:drawable/arrow_up_float"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/button14"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="0.88"
            android:background="@drawable/campos"
            android:gravity="center"
            android:text="@string/pesoInicial"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView16"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button12"
            style="@android:style/Widget.Button.Small"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/botones"
            android:text="@string/volcarTara"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Button.Small"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:background="@drawable/botones"
            android:text="@string/desconetar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cantMax"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintRight_toLeftOf="@+id/textView18"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/campos"
            android:gravity="center"
            android:text="@string/cantInicial"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/button14"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            android:layout_marginLeft="21dp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button4"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="false"
            android:max="5"
            android:progress="0"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/switch1"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/seekBar"
            android:gravity="center"
            android:text="@string/cintaTrans"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:checked="false"
            android:clickable="false"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
